fix: change gap and margin in section point

--- a/css/FAQ/FAQ.css
+++ b/css/FAQ/FAQ.css
@@ -41,7 +41,7 @@
     width: calc(100% - 200px);
     display: flex;
     flex-wrap: wrap;
-    gap: 0 20px;
+    gap: 20px 0;
     justify-content: space-between;
     align-items: center;
 }
@@ -61,6 +61,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    margin-right: 1px;
 }
 
 .point-card-box-line{
@@ -84,14 +85,19 @@
 }
 
 .point-card-text > img{
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
 }
 
 .point-card-text > p:nth-child(2){
     font-weight: 600;
     margin: 10px 0 5px 0;
 }
+
+.point-card-text > p:nth-child(3){
+    line-height: 32px;
+}
+
 
 @media(max-width: 1159px){
     .point{
